# indeed-core

./: pyproject.toml
indeed_core/: __init__.py  exceptions.py  models.py  scraper.py  session.py
