[tool.poetry]
name = "indeed-core"
version = "0.1.0"
description = ""
authors = ["Kaji-Relu <kajinasiruddinahmed@reluconsultancy.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
curl-cffi = "^0.7.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pydantic = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
